modified:   app/assets/stylesheets/application.css 	modified:   app/assets/stylesheets/teas.css.scss 	modified:   app/views/teas/_user_block.html.haml 	modified:   app/views/teas/show.html.haml 	modified:   config/locales/views/teas/ru.yml

--- a/config/locales/views/teas/ru.yml
+++ b/config/locales/views/teas/ru.yml
@@ -26,3 +26,8 @@ ru:
 
   remove_tea: "Удалить"
   edit_tea: "Редактировать"
+
+  attach_tea_picture: "Прикрепить картинку"
+  attach_tea_link: "Прикрепить ссылку"
+
+  confirm_remove_tea: "Удалить этот чай навсегда?"
