--- a/config/locales/views/teas/ru.yml
+++ b/config/locales/views/teas/ru.yml
@@ -31,3 +31,4 @@ ru:
   attach_tea_link: "Прикрепить ссылку"
 
   confirm_remove_tea: "Удалить этот чай навсегда?"
+  send_tea_comment: Комментировать
