comparsion, select second tea, tea lists design

--- a/config/locales/views/teas/ru.yml
+++ b/config/locales/views/teas/ru.yml
@@ -4,6 +4,7 @@ ru:
   tea_factory: "Фабрика"
   tea_category: "Категория"
   tea_collection_date: Дата сбора
+  tea_compared: Сравнен
 
   there_is_no_teas: Нет чаев в этой категории
 
