tea links some fix + edit user profile

--- a/config/locales/views/layouts/ru.yml
+++ b/config/locales/views/layouts/ru.yml
@@ -3,6 +3,7 @@ ru:
 
   site_info: "Этот сайт"
   hello_user: "Привет, %{user}"
+  edit_user_profile: Профиль
   logout: "Выйти"
   sign_up: "Зарегистрироваться"
   sign_in: "Войти"
