axis almost done

--- a/config/locales/views/layouts/ru.yml
+++ b/config/locales/views/layouts/ru.yml
@@ -11,6 +11,8 @@ ru:
   categories: "Категории"
   all_categories: "Все категории"
 
+  axis: "Оси"
+
   puerh: "Пуэр"
   raw_puerh: "Шен Пуэр"
   ripe_puerh: "Шу Пуэр"
